<resources>
    <string name="app_name">Mobile SMS Service</string>
    <string name="enter_your_email_and_password_to_create_account">Enter your email and password to create account</string>
    <string name="enter_your_email_and_password_to_create_new_account">Enter your email and password to create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="mobile_sms_service">Mobile SMS Service</string>
    <string name="icon">ICON</string>
    <string name="login">Login</string>
    <string name="mobile_sms_service_is_running">Mobile SMS service is running</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_up_sms_service">Set up SMS service</string>
    <string name="api">API</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="disable_enable_api">Disable/ Enable API</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">submit</string>
    <string name="set_wake_up_message">Set wake up message</string>
    <string name="phone_number">Phone number</string>
    <string name="wake_up">Wake up</string>
    <string name="wake_up_message">Wake up message</string>
    <string name="message">message</string>
</resources>